change allmost everything

--- a/Pages/Admin/ManagerDashboard.cshtml
+++ b/Pages/Admin/ManagerDashboard.cshtml
@@ -1,7 +1,7 @@
-@page "/Admin/AdminDashboard"
-@model Apartment.Pages.Admin.AdminDashboardModel
+@page "/Admin/ManagerDashboard"
+@model Apartment.Pages.Admin.ManagerDashboardModel
 @{
-    ViewData["Title"] = "Admin Portal";
+    ViewData["Title"] = "Manager Portal";
     Layout = "_Layout";
     var pesoCulture = CultureInfo.CreateSpecificCulture("en-PH");
 }
