--- a/Pages/Tenant/MakePayment.cshtml
+++ b/Pages/Tenant/MakePayment.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        @if (Model.TenantInfo != null)
+        @if (Model.UserInfo != null)
         {
             <div class="payment-layout">
                 <section class="balance-card">
